[package]
name = "analyze-reify"
version = "0.1.0"
authors = ["Michiel Borkent <michielborkent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.6.3"
glob = "0.3.0"
rayon = "1.3.0"

[build-dependencies]
cc = "1.0.50"
